content and alignment issues sorted

--- a/roofing.css
+++ b/roofing.css
@@ -1,7 +1,16 @@
 /* Navbar styles */
-h2{
-  padding-top:20px;
-  padding-bottom:20px;
+h2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.title-text::before {
+  content: "Hello";
+  background-color: red;
+}
+.title-text::after {
+  content: "Hello";
+  background-color: red;
 }
 .navbar {
   background-color: #333;
@@ -35,8 +44,6 @@ h2{
   font-weight: bold;
   text-shadow: 2px 2px #000;
 }
-
-
 
 .img-fluid {
   max-width: 100%;
@@ -97,13 +104,27 @@ ul {
 }
 
 .fa {
+  margin: 0.3rem;
+  position: relative;
+  width: 50px;
+  height: 50px;
+}
+
+.fa::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* .fa {
   padding: 20px;
   font-size: 30px;
   width: 50px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
-}
+} */
 
 .fa:hover {
   opacity: 0.7;
@@ -128,8 +149,8 @@ ul {
   background: #125688;
   color: white;
 }
-.iframe{
-height: 350px;
+.iframe {
+  height: 350px;
 }
 .image {
   transition: transform 0.5s ease;
@@ -138,8 +159,6 @@ height: 350px;
 .image:hover {
   transform: scale(1.1);
 }
-footer{
+footer {
   padding-top: 20px;
 }
-
-
